@@ -1,3 +1,7 @@
+2008-11-17  Adam Nemet  <anemet@caviumnetworks.com>
+
+	* gcc.c-torture/execute/20081117-1.c: New test.
+
 2008-11-17  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* gcc.target/mips/dspr2-MULT.c: Just check for $ac1 and $ac2.
