@@ -1,3 +1,9 @@
+2008-11-17  Adam Nemet  <anemet@caviumnetworks.com>
+
+	* expmed.c (extract_bit_field_1): Also use a temporary and
+	convert_extracted_bit_field when the conversion from ext_mode to
+	the target mode requires explicit truncation.
+
 2008-11-17  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* config/mips/mips.h (REG_ALLOC_ORDER): Put accumulators first.
